# cv_lab

./: .gitignore  CLAUDE.md  LICENSE  README.md  local.properties.template  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/hanzitong/cvfeaturelab/jni/: ProcessorJniTest.kt
app/src/androidTest/java/com/hanzitong/cvlab/jni/: ProcessorJniTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  i_processor.h  jni_bridge.cpp  processor_registry.cpp  processor_registry.h
app/src/main/cpp/plugins/: akaze_processor.cpp  akaze_processor.h  canny_processor.cpp  canny_processor.h  hough_circles_processor.cpp  hough_circles_processor.h  hough_lines_processor.cpp  hough_lines_processor.h  morphology_processor.cpp  morphology_processor.h  orb_processor.cpp  orb_processor.h  sift_processor.cpp  sift_processor.h
app/src/main/java/com/hanzitong/cvfeaturelab/: MainActivity.kt
app/src/main/java/com/hanzitong/cvfeaturelab/jni/: IProcessorApi.kt  ProcessOutput.kt  ProcessorJni.kt
app/src/main/java/com/hanzitong/cvfeaturelab/ui/: CameraPreview.kt  MainScreen.kt  ParameterPanel.kt  PluginSelector.kt  ProcessingOverlay.kt
app/src/main/java/com/hanzitong/cvfeaturelab/viewmodel/: MainViewModel.kt  UiState.kt
app/src/main/java/com/hanzitong/cvlab/: MainActivity.kt
app/src/main/java/com/hanzitong/cvlab/jni/: IProcessorApi.kt  ProcessOutput.kt  ProcessorJni.kt
app/src/main/java/com/hanzitong/cvlab/ui/: CameraPreview.kt  MainScreen.kt  ParameterPanel.kt  PluginSelector.kt  ProcessingOverlay.kt
app/src/main/java/com/hanzitong/cvlab/viewmodel/: MainViewModel.kt  UiState.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/hanzitong/cvfeaturelab/jni/: ProcessOutputTest.kt
app/src/test/java/com/hanzitong/cvfeaturelab/viewmodel/: MainViewModelTest.kt  UiStateTest.kt
docs/: architecture.md  design_decisions.md  setup.md  specification.md
docs/skeleton/: README.md
docs/skeleton/cpp/: CMakeLists.txt  feature_processor.cpp  feature_processor.h  jni_bridge.cpp
docs/skeleton/cpp/detectors/: akaze_detector.cpp  akaze_detector.h  i_feature_detector.h  orb_detector.cpp  orb_detector.h  sift_detector.cpp  sift_detector.h
docs/skeleton/gradle/: build.gradle.kts  libs.versions.toml
docs/skeleton/kotlin/: AlgorithmSelector.kt  CameraPreview.kt  FeatureProcessorJni.kt  IFeatureDetectorApi.kt  MainActivity.kt  MainScreen.kt  MainViewModel.kt  ParameterPanel.kt  ProcessResult.kt  UiState.kt
gradle/: libs.versions.toml
tests/: CMakeLists.txt
tests/cpp/: detector_tests.cpp  feature_processor_tests.cpp  test_helpers.h
(+5 files in other folders)
